--- a/model/sentiment-model.ipynb
+++ b/model/sentiment-model.ipynb
@@ -2,13 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-10-16T10:22:24.367503Z",
+     "start_time": "2024-10-16T10:22:19.799476Z"
+    }
    },
+   "source": [
+    "import torch \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ],
    "outputs": [],
-   "source": "import trans"
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-16T10:22:24.407627Z",
+     "start_time": "2024-10-16T10:22:24.372898Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "torch.backends.mps.is_available()",
+   "id": "c942fb0bdff271a8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "ff8b46b67ebfd2fa"
   }
  ],
  "metadata": {
